<resources>
    <string name="app_name">WhereToEat</string>
    <string name="main_page">主頁</string>
    <string name="draw_lots1">抽籤1</string>
    <string name="draw_lots2">抽籤2</string>
    <string name="enter_restaurant">請輸入餐廳</string>
    <string name="enter">輸入</string>
    <string name="enter_people">請輸入人數</string>
    <string name="random">抽籤</string>
    <string name="refresh">重置</string>
    <string name="restaurant_name">餐廳名稱</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_tb_title">WhereToEat</string>
    <string name="searchable">Searchable</string>
    <string name="menu_search">Search</string>
    <string name="result">Search_Result</string>
</resources>
